<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.harlan.instagramclone.view.LoginActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/edt_usuario_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_senha_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edt_usuario_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_usuario_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="1dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/tv_registro_login"
        app:layout_constraintEnd_toStartOf="@+id/tv_esqueci_senha_login"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha_login" />

    <TextView
        android:id="@+id/tv_registro_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/tv_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_esqueci_senha_login"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_esqueci_senha_login"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_recuperar_senha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
